# QuectelShare

./: .gitignore  .gitmodules  syncbuild.sh
OTA/recovery/: Makefile.am  adb_install.cpp  common.h  configure.ac  fuse_sideload.cpp  fuse_sideload.h  install.cpp  recovery.cpp  recovery.pc.in  roots.cpp  screen_ui.cpp  start_recovery  ui.cpp  ui.h
OTA/recovery/applypatch/: Makefile.am  applypatch.cpp  applypatch.h  configure.ac  freecache.cpp
OTA/recovery/bootloader_message/: Makefile.am  bootloader_message.cpp
OTA/recovery/edify/: Makefile.am  expr.cpp  lexer.ll  main.cpp  parser.yy
OTA/recovery/etc/: init.rc
OTA/recovery/minadbd/: Makefile.am  adb_main.cpp  services.cpp
OTA/recovery/minzip/: Makefile.am  SysUtil.c  Zip.c
OTA/recovery/mtdutils/: Makefile.am  mounts.c  mtdutils.c  mtdutils.h
OTA/recovery/otafault/: Makefile.am  config.cpp  ota_io.cpp
OTA/recovery/updater/: Makefile.am  blockimg.cpp  install.cpp  install.h  updater.cpp  updater.h
bt-proprietary/btrs-daemon/: Makefile.am  btrs_daemon.cpp  configure.ac
bt-proprietary/qc-bt-daemon/: Makefile.am  configure.ac  qc_bt_main.cpp  start_qcbtdaemon
bt-proprietary/qcadump/: Makefile.am  configure.ac  qcadump.c  qcadump.h
camera/lib-legacy/: Makefile.am  configure.ac
data/: Makefile.am  configure.ac
data/adpl/: Android.mk
data/adpl/src/: Android.mk  Makefile.am  adpl.h  adpl_cmdq.c  adpl_cmdq.h  adpl_config  adpl_data.c  adpl_dpm.c  adpl_main.c  adpl_modem.c  adpl_peripheral.c  adpl_qmi.c  start_adpl_le
data/at-cmux/inc/: ds_mux.h  ds_mux_api.h  ds_mux_defs.h  ds_mux_io.h  ds_mux_ipc.h  ds_mux_main.h  ds_mux_types.h  ds_mux_utils.h
data/at-cmux/src/: Makefile.am  ds_mux.c  ds_mux_api.c  ds_mux_io.c  ds_mux_ipc.c  ds_mux_main.c  ds_mux_smd_tty.c  ds_mux_uart_tty.c  ds_mux_utils.c  start_at_cmux_le
data/dsi_netctrl/inc/: dsi_netctrl.h  dsi_netctrl_qos.h
data/dsi_netctrl/src/: Android.mk  Makefile.am  dsi_config.c  dsi_config.h  (+13 more)
data/dsutils/: configure.ac
data/ipa_fws/: Android.mk  Makefile.am  configure.ac
data/ipacm-diag/: Android.mk
data/port-bridge/: Makefile.am  port_bridge.c
data/qmuxbridge/: Android.mk  Makefile.am  qbridge_dpm.c  qbridge_dpm.h  qbridge_log_qxdm.c  qbridge_log_qxdm.h  qbridge_main.c  qbridge_main.h  qbridge_qmi.c  qbridge_qmi.h  qbridge_qmux.h  qbridge_smd.c  qbridge_smd.h
data/radish/: Android.mk  Makefile.am  radish.c
display/libgbm/: Makefile.am  NOTICE  configure.ac  gbm.pc.in
ffmpeg_video/: .decode_video.c.swp  Makefile.am  configure.ac  decode_video.c  encode_video.c  main_test.cpp  qcamera_mp4.c  qcamera_mp4.h
frameworks/camera_metadata/: Makefile.am  configure.ac
fs-scrub-daemon/: Android.mk  Makefile.am  configure.ac  flash_driver_service_v01.c  flash_driver_service_v01.h  fs-scrub-daemon.c  start_fs-scrub-daemon
hardware/libhardware/: Makefile.am  configure.ac
mbim/: Makefile.am  configure.ac
mbim/qbi/: Makefile.am
mbim/qmi_svc/: Makefile.am
mbim/wmsts/: Makefile.am
mcm-core/: Makefile.am  Makefile_multi.am  Makefile_single.am  configure.ac  configure_multi.ac  configure_single.ac  mcm-core.pc.in  mcmril.service.in  service_config.txt
mcm-core/client/: Makefile.am
mcm-core/ipc/: Makefile.am  mcm_atcop_srv_mgr_v01.c  mcm_atcop_v01.c  mcm_client_v01.c  mcm_common_v01.c  mcm_constants.h  mcm_data_srv_mgr_v01.c  mcm_data_v01.c  mcm_dm_v01.c  mcm_ipc.c  mcm_loc_srv_mgr_v01.c  mcm_loc_v01.c  mcm_mobileap_srv_mgr_v01.c  mcm_mobileap_v01.c  mcm_nw_v01.c  mcm_ril_v01.c  mcm_sim_v01.c  mcm_sms_v01.c  mcm_voice_v01.c
mcm-core/mcm_data/: Makefile.am  mcm_data_srv.c  mcm_data_srv.h  mcm_data_utils.c  mcm_data_utils.h
mcm-core/mcm_log_util/: Makefile.am  log_util.c  log_util.h
mcm-core/mcm_sim_test/: Makefile.am  configure.ac  mcm_sim_test.c
mcm-core/mcm_ssr_util/: Makefile.am  mcm_ssr_util.c  mcm_ssr_util.h
mcm-core/mcmtest/: Makefile.am  configure.ac  qmi_client_utils.c  qmi_client_utils.h  qmi_simple_ril_core.c  qmi_simple_ril_core.h  qmi_simple_ril_dm.c  qmi_simple_ril_dm.h  qmi_simple_ril_nas.c  qmi_simple_ril_nas.h  qmi_simple_ril_srv_mgr.c  qmi_simple_ril_srv_mgr.h  qmi_simple_ril_suite.c  qmi_simple_ril_voice.c  qmi_simple_ril_voice.h  qmi_simple_ril_wms.c  qmi_simple_ril_wms.h  qmi_test_console.c  qmi_test_console.h  qmi_testsuite.mk  testModemPower.c
mcm-core/server/: Makefile.am  configure.ac
mcm-core/single-process/: mcm_client_single_process_qmi.c  mcm_client_single_process_qmi.h  mcm_msg_receiver.c  mcm_msg_receiver.h  mcm_single_process.h
mdm-init/: Makefile.am  configure.ac
mdm-init/wlan_apq8009_qsap/: WCNSS_qcom_cfg.ini
mdm-init/wlan_apq8009_robot/: Makefile.am  WCNSS_qcom_cfg.ini  wlan  wpa_supplicant.conf
mdm-init/wlan_apq8098_mediabox/: p2p.conf  wpa_supplicant.conf
mdm-init/wlan_ipc/: ipc-startup.sh
mdm-init/wlan_mdm9650/: Makefile.am  WCNSS_qcom_cfg.ini  wlan
mdm-init/wlan_msm8909_quec_smart/: Makefile.am  WCNSS_qcom_cfg.ini  wlan  wpa_supplicant.conf
mdm-init/wlan_pronto/: hostapd.conf  wlan  wpa_supplicant.conf
mdm-init/wlan_qcs405-som1_qsap/: Makefile.am  WCNSS_qcom_cfg.ini  hostapd-open.conf  hostapd-wpa2.conf  p2p_supplicant.conf  wlan  wpa_supplicant.conf
mdm-init/wlan_qcs605_concam/: Makefile.am  WCNSS_qcom_cfg.ini  hostapd-open.conf  hostapd.conf  p2p_supplicant.conf  sta_mode_hostapd.conf  wlan
mdm-init/wlan_sdio/: Makefile.am  WCNSS_qcom_cfg.ini  p2p_supplicant.conf
mdm-init/wlan_sdxpoorwills/: Makefile.am  WCNSS_qcom_cfg.ini  WCNSS_qcom_cfg.sdio.ini  hostapd-wlan1.conf  hostapd-wlan2.conf  hostapd.conf  wlan  wpa_supplicant.conf
mdm-init/wlan_standalone/: Makefile.am  QCA6574AU.LE.2.2.1_Rome_PCIe_qcacld-2.0.ini  QCA6574AU.LE.2.2.1_Rome_SDIO_qcacld-2.0.ini  QCA6574AU.LE.2.2.3_Rome_PCIe_qcacld-3.0.ini  QCA6574AU.LE.2.6_Rome_PCIe_qcacld-3.0.ini  hostapd.conf  wpa_supplicant.conf
time-services/: Android.mk  Makefile.am  configure.ac  localdefs.h  time_daemon_mdm.c  time_daemon_qmi.c  time_genoff_i.h  time_genoff_mdm.h  time_genoff_qmi.c  time_service_v01.c  time_service_v01.h
time-services/time-genoff/: Makefile.am  configure.ac  time-genoff.pc.in  time_genoff_mdm.c
(+12293 files in other folders)
